[package]
name = "laughing-waffle"
version = "0.1.0"
authors = ["James Lowry <jlowry@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24.0"
rafx = { git = "https://github.com/aclysma/rafx.git", features = ["rafx-metal", "renderer"] }
log = "0.4"
env_logger = "0.6"
ash = ">=0.32"
glam = "0.13.1"
profiling = "0.1.9"
bincode = "1.3.1"
raw-window-handle = "0.3"
